--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
 
-    ext{
+    ext {
         kotlin_version = "1.6.0"
         retrofit_version = "2.9.0"
-        nav_version = "2.3.5"
+        nav_version = "2.4.1"
+        room_version = "2.4.1"
     }
 
     repositories {
@@ -12,10 +13,9 @@ buildscript {
         mavenCentral() // For coil, retrofit and other libraries ...
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
-
-//        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
